# KSharp

./: CMakeLists.txt  LICENSE  README.md
cmake/: KSharpMacros.cmake
data/: ksharp.xml
examples/: exampleClass.kshp  exampleUI.kshp  exampleUI_App.kshp  exampleUI_Window.kshp
src/: KSharpContext.h  KSharpHelpers.cpp  KSharpHelpers.h  lexer.l  main.cpp  parser.y
templates/: CMakeLists.txt.tpl  class.cpp.tpl  class.h.tpl  main.cpp.tpl  main_tridentu.cpp.tpl
tests/: run_tests.sh
tests/invalid/: missing_return_type.kshp  nonstatic_main.kshp  unknown_parent.kshp
tests/valid/: abstract_class.kshp  enums_interfaces.kshp  hello_world.kshp  multi_file_a.kshp  multi_file_b.kshp  properties.kshp  signals_slots.kshp  ui_window.kshp
